 437.	[func]		Log NOTIFY activity to the notify channel.

 436.	[bug]		If recvmsg() returned EHOSTUNREACH or ENETUNREACH,
			which sometimes happens on Linux, named would enter
			a busy loop.  Also, unexpected socket errors were
			not logged at a high enough logging level to be
			useful in diagnosing this situation. [RT #275]

 435.	[bug]		dns_zone_dump() overwrote existing zone files 
			rather than writing to a temporary file and
			renaming.  This could lead to empty or partial
			zone files being left around in certain error
			conditions involving the initial transfer of a
			slave zone, interfering with subsequent server
			startup. [RT #282]

 434.	[func]		New function isc_file_isabsolute().

 433.	[func]		isc_base64_decodestring() now accepts newlines
			within the base64 data.  This makes it possible 
			to break up the key data in a "trusted-keys"
			statement into multiple lines. [RT #284]

 432.	[func]		Added refresh/retry jitter.  This is currently
			hard-coded to be no more than 20% of the SOA
			provided time or 10 minutes, whichever is less.

 431.	[func]		Log at ISC_LOG_INFO when a zone is successfully
			loaded.

 430.	[bug]		Rewrote the lightweight resolver client management
			code to handle shutdown correctly and general
			cleanup.

 429.	[bug]		The space reserved for a TSIG record in a response
			was 2 bytes too short, leading to message
			generation failures.

 428.   [bug]		rbtdb.c:find_closest_nxt() erroneously returned
			DNS_R_BADDB for nodes which had neither NXT nor SIG NXT
			(e.g. glue).  This could cause SERVFAILs when
			generating negative responses in a secure zone.

 427.	[bug]		Avoid going into an infinite loop when the validator
			gets a negative response to a key query where the
			records are signed by the missing key.

 426.	[bug]		Attempting to generate an oversized RSA key could
			cause dnssec-keygen to dump core.

 425.	[bug]		Warn about the auth-nxdomain default value change